# redrocket-market-kit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source.yml  feature_request.yml
.github/scripts/: validate_skill.py
.github/workflows/: ci.yml  release.yml
docs/: red-rocket-interface-audit.md  release.md
redrocket_market/: __init__.py  cli.py  client.py  installer.py
skills/redrocket-market/: SKILL.md
skills/redrocket-market/agents/: openai.yaml
skills/redrocket-market/references/: source-limits.md
tests/: test_cli.py  test_client.py  test_installer.py
