[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redrocket-market-kit"
version = "0.1.0"
description = "Read-only Red Rocket market data CLI and Codex skill"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jamin Zhou" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "PyYAML>=6",
  "ruff>=0.5",
]

[project.scripts]
redrocket = "redrocket_market.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["redrocket_market"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
