[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redrocket-market-kit"
version = "0.3.0"
description = "Read-only Red Rocket market data CLI and agent skill"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Jamin Zhou" }]
dependencies = []
keywords = ["agent", "claude", "codex", "skill", "finance", "market-data", "red-rocket"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/JaminZhou/redrocket-market-kit"
Issues = "https://github.com/JaminZhou/redrocket-market-kit/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8",
  "PyYAML>=6",
  "ruff>=0.5",
]

[project.scripts]
redrocket = "redrocket_market.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["redrocket_market"]

[tool.hatch.build.targets.wheel.force-include]
"skills/redrocket-market" = "redrocket_market/resources/skills/redrocket-market"

[tool.hatch.build.targets.sdist]
include = [
  "/AGENTS.md",
  "/CLAUDE.md",
  "/CODE_OF_CONDUCT.md",
  "/README.md",
  "/README.en.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/SECURITY.md",
  "/docs",
  "/pyproject.toml",
  "/redrocket_market",
  "/skills",
  "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
